# odata

./: .gitignore  README.md  README.rst  main.py  pyproject.toml
docs/: make.bat
docs/_static/: custom.css
docs/source/: api.rst  conf.py  custom.css  index.rst  modules.rst  odata.rst  tmp.txt  types.rst
docs/source/_static/: custom.css
odata/: __authentication.py  __init__.py  _batch.py  _helpers.py  _http.py  _query.py  _query_constructors.py  _types.py  _workflow.py  client.py  errors.py  http.py  types.py  types_deprec.txt
odata/__keycloak/: __auth.py  __platforms.py
